Ported AI Goals to 26.1.x (#2650)